[project]
name = "pokemon-champions-mcp"
version = "0.1.0"
description = "ポケモンチャンピオンズの育成支援 MCP サーバー"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx[http2]>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
